@@ -1,0 +1,3 @@
+<sect1 id="config-accessibility-keyboard">
+  <title>Keyboard Accessibility (AccessX)</title>
+</sect1>
