@@ -1,0 +1,3 @@
+<sect1 id="config-file-type">
+  <title>File Types & Services</title>
+</sect1>
