@@ -1,3 +1,11 @@
+2002-04-23  Jody Goldberg <jody@gnome.org>
+
+	* C/control-center.xml : link in the place holders and add an
+	  accessibilty section to mirror the ui.
+
+	* C/config-file-type.xml : Add place holder.
+	* C/config-accessibility-keyboard.xml : ditto.
+
 2002-04-05  Kevin Breit  <mrproper@ximian.com>
 
 	* C/config-themes.xml: Fixed a typo that caused breakage.
